[gd_scene load_steps=15 format=2]

[ext_resource path="res://source/Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://source/Camera/Camera_Rig.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/Shader/CRT_Layer.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/GameManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/UI/Background/ParallaxBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Sprites/Level/WDH_Tiles.tres" type="TileSet" id=6]
[ext_resource path="res://source/Levels/SpawnPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/Flag/Flag.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/Other/InfoBoard/InfoBoard.tscn" type="PackedScene" id=9]
[ext_resource path="res://source/Other/WallBlock/WallBlock.tscn" type="PackedScene" id=10]
[ext_resource path="res://source/Levels/LevelTemplate3.tscn" type="PackedScene" id=11]
[ext_resource path="res://source/Hazards/Spikes/VerticalSpike.tscn" type="PackedScene" id=12]
[ext_resource path="res://source/Other/InfoBoard/Level 4/How_to_WallDeath.tscn" type="PackedScene" id=13]
[ext_resource path="res://source/UI/Transition/Transition.tscn" type="PackedScene" id=14]

[node name="Level_4" type="Node2D"]
script = ExtResource( 1 )
spawn_point = NodePath("SpawnPoint")

[node name="GameManager" parent="." instance=ExtResource( 4 )]

[node name="Transition" parent="." instance=ExtResource( 14 )]

[node name="How_to_WallDeath" parent="." instance=ExtResource( 13 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="SpawnPoint" parent="." instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 121, 311 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -1 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 2
format = 1
tile_data = PoolIntArray( -851968, 8, 0, -851967, 8, 0, -851966, 8, 0, -851965, 8, 0, -851964, 8, 0, -851963, 8, 0, -851962, 8, 0, -851961, 8, 0, -851960, 8, 0, -851959, 8, 0, -851958, 8, 0, -851957, 8, 0, -851956, 8, 0, -851955, 8, 0, -851954, 8, 0, -851953, 8, 0, -851952, 8, 0, -851951, 8, 0, -851950, 8, 0, -851949, 8, 0, -851948, 8, 0, -851947, 8, 0, -851946, 8, 0, -851945, 8, 0, -851944, 8, 0, -851943, 8, 0, -851942, 8, 0, -851941, 8, 0, -851940, 8, 0, -851939, 8, 0, -851938, 8, 0, -851937, 8, 0, -851936, 8, 0, -851935, 8, 0, -851934, 8, 0, -851933, 8, 0, -851932, 8, 0, -851931, 8, 0, -851930, 8, 0, -851929, 8, 0, -851928, 8, 0, -851927, 8, 0, -851926, 8, 0, -786432, 8, 0, -786431, 8, 0, -786430, 8, 0, -786429, 8, 0, -786428, 8, 0, -786427, 8, 0, -786426, 8, 0, -786425, 8, 0, -786424, 8, 0, -786423, 8, 0, -786422, 8, 0, -786421, 8, 0, -786420, 8, 0, -786419, 8, 0, -786418, 8, 0, -786417, 8, 0, -786416, 8, 0, -786415, 8, 0, -786414, 8, 0, -786413, 8, 0, -786412, 8, 0, -786411, 8, 0, -786410, 8, 0, -786409, 8, 0, -786408, 8, 0, -786407, 8, 0, -786406, 8, 0, -786405, 8, 0, -786404, 8, 0, -786403, 8, 0, -786402, 8, 0, -786401, 8, 0, -786400, 8, 0, -786399, 8, 0, -786398, 8, 0, -786397, 8, 0, -786396, 8, 0, -786395, 8, 0, -786394, 8, 0, -786393, 8, 0, -786392, 8, 0, -786391, 8, 0, -786390, 8, 0, -720896, 8, 0, -720895, 8, 0, -720894, 8, 0, -720893, 8, 0, -720892, 8, 0, -720891, 8, 0, -720890, 8, 0, -720889, 8, 0, -720888, 8, 0, -720887, 8, 0, -720886, 8, 0, -720885, 8, 0, -720884, 8, 0, -720883, 8, 0, -720882, 8, 0, -720881, 8, 0, -720880, 8, 0, -720879, 8, 0, -720878, 8, 0, -720877, 8, 0, -720876, 8, 0, -720875, 8, 0, -720874, 8, 0, -720873, 8, 0, -720872, 8, 0, -720871, 8, 0, -720870, 8, 0, -720869, 8, 0, -720868, 8, 0, -720867, 8, 0, -720866, 8, 0, -720865, 8, 0, -720864, 8, 0, -720863, 8, 0, -720862, 8, 0, -720861, 8, 0, -720860, 8, 0, -720859, 8, 0, -720858, 8, 0, -720857, 8, 0, -720856, 8, 0, -720855, 8, 0, -720854, 8, 0, -655360, 8, 0, -655359, 8, 0, -655358, 8, 0, -655357, 8, 0, -655356, 8, 0, -655355, 8, 0, -655354, 8, 0, -655353, 8, 0, -655352, 8, 0, -655351, 8, 0, -655350, 8, 0, -655349, 8, 0, -655348, 8, 0, -655347, 8, 0, -655346, 8, 0, -655345, 8, 0, -655344, 8, 0, -655343, 8, 0, -655342, 8, 0, -655341, 8, 0, -655340, 8, 0, -655339, 8, 0, -655338, 8, 0, -655337, 8, 0, -655336, 8, 0, -655335, 8, 0, -655334, 8, 0, -655333, 8, 0, -655332, 8, 0, -655331, 8, 0, -655330, 8, 0, -655329, 8, 0, -655328, 8, 0, -655327, 8, 0, -655326, 8, 0, -655325, 8, 0, -655324, 8, 0, -655323, 8, 0, -655322, 8, 0, -655321, 8, 0, -655320, 8, 0, -655319, 8, 0, -655318, 8, 0, -589824, 8, 0, -589823, 8, 0, -589822, 8, 0, -589821, 8, 0, -589820, 8, 0, -589819, 8, 0, -589818, 8, 0, -589817, 8, 0, -589816, 8, 0, -589815, 8, 0, -589814, 8, 0, -589813, 8, 0, -589812, 8, 0, -589811, 20, 0, -589810, 5, 0, -589809, 5, 0, -589808, 5, 0, -589807, 5, 0, -589806, 5, 0, -589805, 5, 0, -589804, 5, 0, -589803, 5, 0, -589802, 5, 0, -589801, 5, 0, -589800, 5, 0, -589799, 5, 0, -589798, 5, 0, -589797, 5, 0, -589796, 5, 0, -589795, 5, 0, -589794, 5, 0, -589793, 5, 0, -589792, 5, 0, -589791, 5, 0, -589790, 5, 0, -589789, 5, 0, -589788, 5, 0, -589787, 22, 0, -589786, 8, 0, -589785, 8, 0, -589784, 8, 0, -589783, 8, 0, -589782, 8, 0, -524288, 8, 0, -524287, 8, 0, -524286, 8, 0, -524285, 8, 0, -524284, 8, 0, -524283, 8, 0, -524282, 8, 0, -524281, 8, 0, -524280, 8, 0, -524279, 8, 0, -524278, 8, 0, -524277, 8, 0, -524276, 8, 0, -524275, 3, 0, -524251, 7, 0, -524250, 8, 0, -524249, 8, 0, -524248, 8, 0, -524247, 8, 0, -524246, 8, 0, -458752, 8, 0, -458751, 8, 0, -458750, 8, 0, -458749, 8, 0, -458748, 8, 0, -458747, 8, 0, -458746, 8, 0, -458745, 8, 0, -458744, 8, 0, -458743, 8, 0, -458742, 8, 0, -458741, 8, 0, -458740, 8, 0, -458739, 3, 0, -458715, 7, 0, -458714, 8, 0, -458713, 8, 0, -458712, 8, 0, -458711, 8, 0, -458710, 8, 0, -393216, 8, 0, -393215, 8, 0, -393214, 8, 0, -393213, 8, 0, -393212, 8, 0, -393211, 8, 0, -393210, 8, 0, -393209, 8, 0, -393208, 8, 0, -393207, 8, 0, -393206, 8, 0, -393205, 8, 0, -393204, 8, 0, -393203, 3, 0, -393179, 7, 0, -393178, 8, 0, -393177, 8, 0, -393176, 8, 0, -393175, 8, 0, -393174, 8, 0, -327680, 8, 0, -327679, 8, 0, -327678, 8, 0, -327677, 8, 0, -327676, 8, 0, -327675, 8, 0, -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -327669, 8, 0, -327668, 8, 0, -327667, 3, 0, -327643, 7, 0, -327642, 8, 0, -327641, 8, 0, -327640, 8, 0, -327639, 8, 0, -327638, 8, 0, -262144, 8, 0, -262143, 8, 0, -262142, 8, 0, -262141, 8, 0, -262140, 8, 0, -262139, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 8, 0, -262134, 8, 0, -262133, 8, 0, -262132, 8, 0, -262131, 3, 0, -262107, 7, 0, -262106, 8, 0, -262105, 8, 0, -262104, 8, 0, -262103, 8, 0, -262102, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -196597, 8, 0, -196596, 8, 0, -196595, 3, 0, -196571, 7, 0, -196570, 8, 0, -196569, 8, 0, -196568, 8, 0, -196567, 8, 0, -196566, 8, 0, -131072, 8, 0, -131071, 8, 0, -131070, 8, 0, -131069, 8, 0, -131068, 8, 0, -131067, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -131061, 8, 0, -131060, 8, 0, -131059, 3, 0, -131035, 7, 0, -131034, 8, 0, -131033, 8, 0, -131032, 8, 0, -131031, 8, 0, -131030, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 8, 0, -65532, 8, 0, -65531, 8, 0, -65530, 8, 0, -65529, 8, 0, -65528, 8, 0, -65527, 8, 0, -65526, 8, 0, -65525, 8, 0, -65524, 8, 0, -65523, 3, 0, -65499, 7, 0, -65498, 8, 0, -65497, 8, 0, -65496, 8, 0, -65495, 8, 0, -65494, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 3, 0, 37, 7, 0, 38, 8, 0, 39, 8, 0, 40, 8, 0, 41, 8, 0, 42, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 3, 0, 65573, 7, 0, 65574, 8, 0, 65575, 8, 0, 65576, 8, 0, 65577, 8, 0, 65578, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 3, 0, 131109, 7, 0, 131110, 8, 0, 131111, 8, 0, 131112, 8, 0, 131113, 8, 0, 131114, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 8, 0, 196621, 3, 0, 196645, 7, 0, 196646, 8, 0, 196647, 8, 0, 196648, 8, 0, 196649, 8, 0, 196650, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 262156, 8, 0, 262157, 18, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 2, 0, 262181, 7, 0, 262182, 8, 0, 262183, 8, 0, 262184, 8, 0, 262185, 8, 0, 262186, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327693, 8, 0, 327694, 8, 0, 327695, 8, 0, 327696, 8, 0, 327697, 8, 0, 327698, 8, 0, 327699, 8, 0, 327700, 8, 0, 327701, 8, 0, 327702, 8, 0, 327703, 8, 0, 327704, 8, 0, 327705, 8, 0, 327706, 3, 0, 327717, 7, 0, 327718, 8, 0, 327719, 8, 0, 327720, 8, 0, 327721, 8, 0, 327722, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 8, 0, 393232, 8, 0, 393233, 8, 0, 393234, 8, 0, 393235, 8, 0, 393236, 8, 0, 393237, 8, 0, 393238, 8, 0, 393239, 8, 0, 393240, 8, 0, 393241, 8, 0, 393242, 3, 0, 393253, 7, 0, 393254, 8, 0, 393255, 8, 0, 393256, 8, 0, 393257, 8, 0, 393258, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 8, 0, 458774, 8, 0, 458775, 8, 0, 458776, 8, 0, 458777, 8, 0, 458778, 3, 0, 458789, 7, 0, 458790, 8, 0, 458791, 8, 0, 458792, 8, 0, 458793, 8, 0, 458794, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 524308, 8, 0, 524309, 8, 0, 524310, 8, 0, 524311, 8, 0, 524312, 8, 0, 524313, 8, 0, 524314, 3, 0, 524324, 12, 0, 524325, 32, 0, 524326, 8, 0, 524327, 8, 0, 524328, 8, 0, 524329, 8, 0, 524330, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589840, 8, 0, 589841, 8, 0, 589842, 8, 0, 589843, 8, 0, 589844, 8, 0, 589845, 8, 0, 589846, 8, 0, 589847, 8, 0, 589848, 8, 0, 589849, 8, 0, 589850, 3, 0, 589861, 7, 0, 589862, 8, 0, 589863, 8, 0, 589864, 8, 0, 589865, 8, 0, 589866, 8, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 655377, 8, 0, 655378, 8, 0, 655379, 8, 0, 655380, 8, 0, 655381, 8, 0, 655382, 8, 0, 655383, 8, 0, 655384, 8, 0, 655385, 8, 0, 655386, 3, 0, 655397, 7, 0, 655398, 8, 0, 655399, 8, 0, 655400, 8, 0, 655401, 8, 0, 655402, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 8, 0, 720914, 8, 0, 720915, 8, 0, 720916, 8, 0, 720917, 8, 0, 720918, 8, 0, 720919, 8, 0, 720920, 8, 0, 720921, 8, 0, 720922, 3, 0, 720933, 7, 0, 720934, 8, 0, 720935, 8, 0, 720936, 8, 0, 720937, 8, 0, 720938, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 20, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 22, 0, 786458, 34, 0, 786459, 10, 0, 786469, 7, 0, 786470, 8, 0, 786471, 8, 0, 786472, 8, 0, 786473, 8, 0, 786474, 8, 0, 851968, 8, 0, 851969, 8, 0, 851970, 8, 0, 851971, 8, 0, 851972, 3, 0, 851993, 7, 0, 851994, 3, 0, 852005, 7, 0, 852006, 8, 0, 852007, 8, 0, 852008, 8, 0, 852009, 8, 0, 852010, 8, 0, 917504, 8, 0, 917505, 8, 0, 917506, 8, 0, 917507, 8, 0, 917508, 3, 0, 917529, 7, 0, 917530, 3, 0, 917541, 7, 0, 917542, 8, 0, 917543, 8, 0, 917544, 8, 0, 917545, 8, 0, 917546, 8, 0, 983040, 8, 0, 983041, 8, 0, 983042, 8, 0, 983043, 8, 0, 983044, 3, 0, 983065, 6, 0, 983066, 4, 0, 983077, 7, 0, 983078, 8, 0, 983079, 8, 0, 983080, 8, 0, 983081, 8, 0, 983082, 8, 0, 1048576, 8, 0, 1048577, 8, 0, 1048578, 8, 0, 1048579, 8, 0, 1048580, 3, 0, 1048612, 12, 0, 1048613, 32, 0, 1048614, 8, 0, 1048615, 8, 0, 1048616, 8, 0, 1048617, 8, 0, 1048618, 8, 0, 1114112, 8, 0, 1114113, 8, 0, 1114114, 8, 0, 1114115, 8, 0, 1114116, 3, 0, 1114149, 7, 0, 1114150, 8, 0, 1114151, 8, 0, 1114152, 8, 0, 1114153, 8, 0, 1114154, 8, 0, 1179648, 8, 0, 1179649, 8, 0, 1179650, 8, 0, 1179651, 8, 0, 1179652, 3, 0, 1179685, 7, 0, 1179686, 8, 0, 1179687, 8, 0, 1179688, 8, 0, 1179689, 8, 0, 1179690, 8, 0, 1245184, 8, 0, 1245185, 8, 0, 1245186, 8, 0, 1245187, 8, 0, 1245188, 3, 0, 1245221, 7, 0, 1245222, 8, 0, 1245223, 8, 0, 1245224, 8, 0, 1245225, 8, 0, 1245226, 8, 0, 1310720, 8, 0, 1310721, 8, 0, 1310722, 8, 0, 1310723, 8, 0, 1310724, 18, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1310757, 16, 0, 1310758, 8, 0, 1310759, 8, 0, 1310760, 8, 0, 1310761, 8, 0, 1310762, 8, 0, 1376256, 8, 0, 1376257, 8, 0, 1376258, 8, 0, 1376259, 8, 0, 1376260, 8, 0, 1376261, 8, 0, 1376262, 8, 0, 1376263, 8, 0, 1376264, 8, 0, 1376265, 8, 0, 1376266, 8, 0, 1376267, 8, 0, 1376268, 8, 0, 1376269, 8, 0, 1376270, 8, 0, 1376271, 8, 0, 1376272, 8, 0, 1376273, 8, 0, 1376274, 8, 0, 1376275, 8, 0, 1376276, 8, 0, 1376277, 8, 0, 1376278, 8, 0, 1376279, 8, 0, 1376280, 8, 0, 1376281, 8, 0, 1376282, 8, 0, 1376283, 8, 0, 1376284, 8, 0, 1376285, 8, 0, 1376286, 8, 0, 1376287, 8, 0, 1376288, 8, 0, 1376289, 8, 0, 1376290, 8, 0, 1376291, 8, 0, 1376292, 8, 0, 1376293, 8, 0, 1376294, 8, 0, 1376295, 8, 0, 1376296, 8, 0, 1376297, 8, 0, 1376298, 8, 0, 1441792, 8, 0, 1441793, 8, 0, 1441794, 8, 0, 1441795, 8, 0, 1441796, 8, 0, 1441797, 8, 0, 1441798, 8, 0, 1441799, 8, 0, 1441800, 8, 0, 1441801, 8, 0, 1441802, 8, 0, 1441803, 8, 0, 1441804, 8, 0, 1441805, 8, 0, 1441806, 8, 0, 1441807, 8, 0, 1441808, 8, 0, 1441809, 8, 0, 1441810, 8, 0, 1441811, 8, 0, 1441812, 8, 0, 1441813, 8, 0, 1441814, 8, 0, 1441815, 8, 0, 1441816, 8, 0, 1441817, 8, 0, 1441818, 8, 0, 1441819, 8, 0, 1441820, 8, 0, 1441821, 8, 0, 1441822, 8, 0, 1441823, 8, 0, 1441824, 8, 0, 1441825, 8, 0, 1441826, 8, 0, 1441827, 8, 0, 1441828, 8, 0, 1441829, 8, 0, 1441830, 8, 0, 1441831, 8, 0, 1441832, 8, 0, 1441833, 8, 0, 1441834, 8, 0, 1507328, 8, 0, 1507329, 8, 0, 1507330, 8, 0, 1507331, 8, 0, 1507332, 8, 0, 1507333, 8, 0, 1507334, 8, 0, 1507335, 8, 0, 1507336, 8, 0, 1507337, 8, 0, 1507338, 8, 0, 1507339, 8, 0, 1507340, 8, 0, 1507341, 8, 0, 1507342, 8, 0, 1507343, 8, 0, 1507344, 8, 0, 1507345, 8, 0, 1507346, 8, 0, 1507347, 8, 0, 1507348, 8, 0, 1507349, 8, 0, 1507350, 8, 0, 1507351, 8, 0, 1507352, 8, 0, 1507353, 8, 0, 1507354, 8, 0, 1507355, 8, 0, 1507356, 8, 0, 1507357, 8, 0, 1507358, 8, 0, 1507359, 8, 0, 1507360, 8, 0, 1507361, 8, 0, 1507362, 8, 0, 1507363, 8, 0, 1507364, 8, 0, 1507365, 8, 0, 1507366, 8, 0, 1507367, 8, 0, 1507368, 8, 0, 1507369, 8, 0, 1507370, 8, 0 )

[node name="Corpses" type="Node2D" parent="."]
position = Vector2( 1, 0 )

[node name="Camera_Rig" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 180 )
limit_left = 47
limit_top = -145
limit_right = 640
limit_bottom = 360
drag_margin_left = 0.4
drag_margin_top = 1.0
drag_margin_right = 0.4
drag_margin_bottom = 1.0

[node name="CRT_Layer" parent="." instance=ExtResource( 3 )]

[node name="Flag" parent="." instance=ExtResource( 8 )]
position = Vector2( 248, 63 )
next_level = ExtResource( 11 )

[node name="InfoBoard" parent="." instance=ExtResource( 9 )]
position = Vector2( 417, 319 )
tutorial_board = NodePath("../How_to_WallDeath")

[node name="WallBlocks" type="Node2D" parent="."]

[node name="WallBlock27" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 311 )

[node name="WallBlock28" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 295 )

[node name="WallBlock29" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 279 )

[node name="WallBlock30" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 263 )

[node name="WallBlock31" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 247 )

[node name="WallBlock32" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 231 )

[node name="WallBlock33" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 88, 215 )

[node name="WallBlock34" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 311 )

[node name="WallBlock35" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 295 )

[node name="WallBlock36" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 279 )

[node name="WallBlock38" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 247 )

[node name="WallBlock39" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 231 )

[node name="WallBlock40" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 215 )

[node name="WallBlock41" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 247 )

[node name="WallBlock42" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 231 )

[node name="WallBlock43" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 215 )

[node name="WallBlock44" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 199 )

[node name="WallBlock45" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 183 )

[node name="WallBlock46" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 167 )

[node name="WallBlock47" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 151 )

[node name="WallBlock48" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 183 )

[node name="WallBlock49" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 167 )

[node name="WallBlock50" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 151 )

[node name="WallBlock51" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 135 )

[node name="WallBlock52" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 119 )

[node name="WallBlock53" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 103 )

[node name="WallBlock54" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 87 )

[node name="WallBlock55" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 440, 71 )

[node name="WallBlock56" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 119 )

[node name="WallBlock57" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 103 )

[node name="WallBlock58" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 87 )

[node name="WallBlock59" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 71 )

[node name="WallBlock60" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 55 )

[node name="WallBlock61" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 39 )

[node name="WallBlock62" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 23 )

[node name="WallBlock63" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, 7 )

[node name="WallBlock64" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -9 )

[node name="WallBlock65" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -25 )

[node name="WallBlock66" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -41 )

[node name="WallBlock67" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -57 )

[node name="WallBlock68" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -73 )

[node name="WallBlock69" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -89 )

[node name="WallBlock70" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -105 )

[node name="WallBlock71" parent="WallBlocks" instance=ExtResource( 10 )]
position = Vector2( 584, -121 )

[node name="Spikes" type="Node2D" parent="."]

[node name="VerticalSpike" parent="Spikes" instance=ExtResource( 12 )]
position = Vector2( 576, 271 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="VerticalSpike3" parent="Spikes" instance=ExtResource( 12 )]
position = Vector2( 576, 143 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="VerticalSpike2" parent="Spikes" instance=ExtResource( 12 )]
position = Vector2( 448, 207 )

[connection signal="animation_finished" from="Transition/AnimationPlayer" to="." method="_on_Level4_animation_finished"]
[connection signal="player_collided" from="Flag" to="." method="_on_Level4_player_collided"]

[editable path="Transition"]
